ensure there's no gap next to search button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ main#content {
 .people-search input[type='submit'] {
   position: absolute;
   margin-top: 2px;
+  margin-left: -4px;
   width: 47px;
   height: 47px;
   border: 1px solid #6F777B;
